# dioxus

./: LICENSE  README.md
hot_dog/: .env  Cargo.toml  dogs.txt  hotdog.db
hot_dog/assets/: main.css
hot_dog/src/: backend.rs  main.rs
hot_dog/src/components/: favorites.rs  nav.rs  view.rs
