[package]
name = "hot_dog"
version = "0.1.0"
authors = ["yindao466 <yindao@tuta.io>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1", features = ["fullstack", "router"] }
reqwest = { version = "0.13.4", features = ["json"] }
rusqlite = { version = "0.40.1", optional = true }                 # apt install libsqlite3-dev
serde = { version = "1.0.228", features = ["derive"] }

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server", "dep:rusqlite"]
